fix(Mask): Make full-screen Mask work in Safari
Remove unnecessary CSS rules from the Mask component
that were preventing the Modal from working with
screen resolution/font-size resizing in Safari.

Fixes: OUT-1469, INSTUI-840

Test plan:
- Open a full-screen Mask in Safari

- Resize your screen resolution via command +/-

- Confirm that the Mask still covers the full screen

- Repeat this process with a full-screen Modal

- Test all supported browsers (note that the full-screen
  Modal does not work in IE11 -- approved by Product Design)

Reviewed-on: https://gerrit.instructure.com/132104
Tested-by: Jenkins
Product-Review: Ken Meleta <kmeleta@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>

--- a/packages/ui-core/src/components/Mask/styles.css
+++ b/packages/ui-core/src/components/Mask/styles.css
@@ -6,8 +6,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
   overflow: auto;
 
   display: flex;
@@ -26,7 +24,6 @@
 
 .fullScreen {
   position: fixed;
-  width: 100vw;
 }
 
 .top {
